--- a/4/css/style.css
+++ b/4/css/style.css
@@ -3,8 +3,8 @@
     font-style: normal;
     font-weight: normal;
     src: local('PT Sans'), local('PTSans')
-    url('../fonts/ptsans.woff2') format('woff2')
-    url('../fonts/ptsans.woff') format('woff')
+    url('/fonts/ptsans.woff2') format('woff2')
+    url('/fonts/ptsans.woff') format('woff')
 }
 
 @font-face {
@@ -12,8 +12,35 @@
     font-style: normal;
     font-weight: normal;
     src: local('Cuprum')
-    url('../fonts/cuprum.woff2') format('woff2') 
-    url('../fonts/cuprum.woff') format('woff')
+    url('/fonts/cuprum.woff2') format('woff2') 
+    url('/fonts/cuprum.woff') format('woff')
+} 
+
+@font-face {
+    font-family: PT Sans Bold;
+    font-style: normal;
+    font-weight: normal;
+    src: local('PT Sans Bold'), local('PTSansBold')
+    url('/fonts/ptsans.woff2') format('woff2')
+    url('/fonts/ptsans.woff') format('woff')
+}
+
+@font-face {
+    font-family: Cuprum Bold;
+    font-style: normal;
+    font-weight: normal;
+    src: local('Cuprum Bold')
+    url('/fonts/cuprumbold.woff2') format('woff2') 
+    url('/fonts/cuprumbold.woff') format('woff')
+}
+
+@font-face {
+    font-family: Cuprum Italic;
+    font-style: normal;
+    font-weight: normal;
+    src: local('Cuprum Italic')
+    url('/fonts/cuprumitalic.woff2') format('woff2') 
+    url('/fonts/cuprumitalic.woff') format('woff')
 }
 
 :root {
@@ -26,24 +53,39 @@
    --basik-green: #63a63e;
    --basik-green-nav: #5fbb2d;
    --basik-green-click: #518534;
-   --basik-mat1: #ffbf47;
-   --basik-mat2: #3bbce3;
-   --basik-mat3: #dc91d8;
-   --basik-mat4: #8ed78f;
+   --stuff-yellow: #ffbf47;
+   --stuff-blue: #3bbce3;
+   --stuff-violet: #dc91d8;
+   --stuff-green: #8ed78f;
    --basik-white: #ffffff;
    --basik-black: #000000; 
    --basik-greylight: #c5c5c5;   
    --basik-topbackground: rgba(0, 0, 0, 0.0001); 
-   --basik-adr: #32425c;
-   --background-pr: #f9f5f0;
+   --dark-grey: #32425c;
+   --background-products: #f9f5f0;
    --basik-cen: #a9a9a9;
-   --adr-foot: #f3f7f9;
+   --low-white: #f3f7f9;
 }
 
 body {
    min-width: 960px;
    margin: 0;
    padding: 0;
+   
+}
+
+.products-block h2,
+.contacts h2,
+.products h2,
+.details-list,
+.details h2,
+.manufactures-block h2,
+.service p,
+.service-slide h3,
+.service h2 {
+   font-family: Cuprum;
+   font-style: normal;
+   font-weight: normal;
 }
 
 a {
@@ -54,6 +96,17 @@ a {
 img {
     max-width: 100%;
     height: auto;
+}
+
+.no-indentation {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    font-weight: normal;
+}
+
+.no-bulites {
+    list-style-type: none;
 }
 
 .header-logo {
@@ -67,10 +120,6 @@ img {
     color: var(--basik-white);
     background-color: var(--dark-blue);
     list-style: none;
-}
-
-.order-navigation {
-    list-style-type: none;
 }
 
 .main-description p {
@@ -97,10 +146,7 @@ img {
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;
-    color: var(--basik-adr);
-}
-.main-navigation {
-    list-style-type: none;
+    color: var(--dark-grey);
 }
 
 .site-navigation {
@@ -108,83 +154,57 @@ img {
     line-height: 24px;
     color: var(--basik-white);
     background-color: var(--dark-blue);
-    list-style: none;
 }
 
-.categories {
-    list-style-type: none;
-}
-
-.categories-item1 {
+.categories-item {
     font-family: Cumprum;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
     line-height: 30ph;
-    background-color: var(--basik-mat1);
     color: var(--basik-white);
     width: 300px;
     height: 123px;
 }
 
-.categories-item2 {
-    font-family: Cumprum;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 30ph;
-    background-color: var(--basik-mat2);
-    color: var(--basik-white);
-    width: 300px;
-    height: 123px;
+.categories-list li:nth-child(1) {
+    background-color: var(--stuff-yellow);
 }
 
-.categories-item3 {
-    font-family: Cumprum;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 30ph;
-    background-color: var(--basik-mat3);
-    color: var(--basik-white);
-    width: 300px;
-    height: 123px;
+.categories-list li:nth-child(2) {
+    background-color: var(--stuff-blue);
 }
 
-.categories-item4 {
-    font-family: Cumprum;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 30ph;
-    background-color: var(--basik-mat4);
-    color: var(--basik-white);
-    width: 300px;
-    height: 123px;
+.categories-list li:nth-child(3) {
+    background-color: var(--stuff-violet);
 }
 
-.categories-item5 {
-    font-family: Cumprum;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 30ph;
-    background-color: var(--basik-mat1);
-    color: var(--basik-white);
-    width: 300px;
-    height: 123px;
+.categories-list li:nth-child(4) {
+    background-color: var(--stuff-green);
 }
 
-.products h2 {
-    background-color: var(--background-pr);
+.categories-list li:nth-child(5) {
+    background-color: var(--stuff-yellow);
+}
+
+.products-block {
+    background-color: var(--background-products);
     width: 940px;
     height: 89px;
 }
 
+.products-block h2 {
+    text-transform: uppercase;
+}
+
+
+.products h2 {
+    font-size: 30px;
+    text-transform: uppercase;
+    line-height: 30px;
+}
+
 .products a {
-    font-family: Cuprum;
-    font-style: normal;
-    font-weight: normal;
     font-size: 14px;
     line-height: 18px;
     color: var(--basik-white);
@@ -211,20 +231,19 @@ img {
     color: var(--basik-cen);
 }
 
-.manufactures-list {
-    list-style-type: none;
-}
-
-.manufactures h2 {
-    background-color: var(--background-pr);
+.manufactures-block {
+    background-color: var(--background-products);
     width: 940px;
     height: 89px;
 }
 
+.manufactures-block h2 {
+    font-size: 30px;
+    line-height: 30px;
+    text-transform: uppercase;
+}
+
 .manufactures a {
-    font-family: Cuprum;
-    font-style: normal;
-    font-weight: normal;
     font-size: 14px;
     line-height: 18px;
     color: var(--basik-white);
@@ -233,12 +252,7 @@ img {
     background-color: var(--basik-red);
 }
 
-
-
 .service h2 {
-    font-family: Cuprum;
-    font-style: normal;
-    font-weight: normal;
     font-size: 30px;
     line-height: 30px;
     text-transform: uppercase;
@@ -246,9 +260,6 @@ img {
 }
 
 .service-slide h3 {
-    font-family: Cuprum;
-    font-style: normal;
-    font-weight: normal;
     font-size: 30px;
     line-height: 30px;
     text-transform: uppercase;
@@ -256,19 +267,13 @@ img {
 }
 
 .service p {
-    font-family: Cuprum;
-    font-style: normal;
-    font-weight: normal;
     font-size: 13px;
     line-height: 24px;
     color: var(--basik-black);
 }
 
 .details h2 {
-    font-family: Cuprum;
-    font-style: normal;
-    font-weight: normal;
-    font-size:30;
+    font-size: 30px;
     line-height: 30px;
     text-transform: uppercase;
     color: var(--basik-black);
@@ -283,18 +288,20 @@ img {
 }
 
 .details-list {
-    list-style-type: none;
-    font-family: Cuprum;
-    font-style: normal;
-    font-weight: normal;
     font-size: 18px;
     line-height: 24px;
     color: var(--basik-black)
 }
 
+.contacts h2 {
+    text-transform: uppercase;
+    font-size: 30px;
+    line-height: 30px;
+    color: var(--basik-black)
+}
+
 .footer-navigation {
-    list-style-type: none;
-    background-color: var(--basik-adr);
+    background-color: var(--dark-grey);
 }
 
 .footer-navigation h2 {
@@ -304,24 +311,13 @@ img {
     list-style: none;
 }
 
-.footer-nav { 
-    list-style-type: none;
-}
-
-.footer-cat {
-    list-style-type: none;
-}
-
 .footer-cat address {
-    color: var(--adr-foot);
+    color: var(--low-white);
 }
 
 .footer-contacts {
     background-color: var(--dark-blue);
     color: var(--basik-white);
 }
-.footer-social {
-    list-style-type: none;
-    
-}
+
 
