--- a/css/style.css
+++ b/css/style.css
@@ -95,22 +95,77 @@ img {
 
 .no-bulites {
     list-style-type: none;
+    padding-inline-start: 0;
 }
 
-.logo-text {
-    position: absolute;
-    left: 3%;
-    right: 75.58%;
-    top: 1.75%;
-    bottom: 90.62%;
+.notheading {
+    visibility: hidden;
+}
+
+.page-body {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+}
+
+.main-order-bar {
+    background-color: var(--dark-blue);
+    height: 42px;
+   
 }
 
 .main-order {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 20px;
     font-size: 18px;
     line-height: 24px;
     color: var(--basik-white);
-    background-color: var(--dark-blue);
     list-style: none;
+    width: 940px;
+    margin: 0 auto;
+}
+
+.header-logo {
+    background-color: var(--basik-red);
+    box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
+    padding-left: 56px;
+    padding-right: 56px;
+    padding-top: 13px;
+    padding-bottom: 13px;     
+}
+
+.order-navigation {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 8px;                         /*временное решение*/
+}
+
+.button-sign {
+    height: 45px;
+    width: 121px;
+}
+
+.button-reg {
+    height: 45px;
+    width: 150px;
+    
+}
+
+.main-description {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 940px;
+    height: 158px;
+    margin: 0 auto;
+    align-items: center;
+}
+
+.tell-adress {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 20px 20px;
+    justify-self: center;
 }
 
 .main-description p {
@@ -140,11 +195,38 @@ img {
     color: var(--dark-grey);
 }
 
+.button-order {
+    justify-self: right;
+}
+
 .site-navigation {
+    display: grid;
+    grid-template-columns: repeat(7, auto);
+    gap: 20px;
     font-size: 18px;
     line-height: 24px;
     color: var(--basik-white);
     background-color: var(--dark-blue);
+    width: 940px;
+    margin: 0 auto;
+    height: 60px;
+    text-align: center;
+    align-items: center;
+    justify-self: end;
+}
+
+.categories-list {
+    display: grid;
+    grid-template-columns: 300px 300px 300px;
+    grid-template-rows: 123px 123px 123px;
+    gap: 20px;
+    width: 940px;
+    margin: 0 auto;
+}
+
+.categories-slider {
+    grid-column: 1/3;
+    grid-row: 2/-1;  
 }
 
 .categories-item {
@@ -154,8 +236,6 @@ img {
     font-size: 24px;
     line-height: 30ph;
     color: var(--basik-white);
-    width: 300px;
-    height: 123px;
 }
 
 .categories-list li:nth-child(1) {
@@ -179,28 +259,42 @@ img {
 }
 
 .products-block {
+    display: grid;
+    grid-template-columns: 1fr 192px;
+    align-items: center;
     background-color: var(--background-products);
     width: 940px;
     height: 89px;
+    margin: 0 auto;
+    
 }
 
 .products-block h2 {
     text-transform: uppercase;
 }
 
-.products h2 {
+.products h3 {
     font-size: 30px;
     text-transform: uppercase;
     line-height: 30px;
 }
 
-.products a {
+.products-block-nav {
+    background-color: var(--basik-red);  
+    padding: 14px 24px 14px 24px;
     font-size: 14px;
     line-height: 18px;
-    color: var(--basik-white);
-    text-align: center;
     text-transform: uppercase;
-    background-color: var(--basik-red);  
+    text-align: center;
+}
+
+.products-list {
+    display: grid;
+    grid-template-columns: repeat(4, 220px);
+    grid-template-rows: 318px;
+    gap: 20px;
+    width: 940px;
+    margin: 0 auto;
 }
 
 .products-item p {
@@ -222,9 +316,13 @@ img {
 }
 
 .manufactures-block {
+    display: grid;
+    grid-template-columns: 1fr 192px;
+    align-items: center;
     background-color: var(--background-products);
     width: 940px;
     height: 89px;
+    margin: 0 auto;
 }
 
 .manufactures-block h2 {
@@ -233,14 +331,38 @@ img {
     text-transform: uppercase;
 }
 
-.manufactures a {
+.manufactures-block-nav {
+    background-color: var(--basik-red); 
+    padding: 14px 39px 14px 39px;
     font-size: 14px;
     line-height: 18px;
-    color: var(--basik-white);
-    text-align: center;
     text-transform: uppercase;
-    background-color: var(--basik-red);
     text-align: center;
+    white-space: nowrap;
+}
+
+.manufactures-list{
+    display: grid;
+    grid-template-columns: repeat(4, 220px);
+    grid-template-rows: 145px 145px;
+    gap: 20px;
+    width: 940px;
+    margin: 0 auto;
+}
+
+.service {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.service-slide {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.service-slide-warranty,
+.service-slide-credit {
+    display: none;
 }
 
 .service h2 {
@@ -261,6 +383,45 @@ img {
     font-size: 13px;
     line-height: 24px;
     color: var(--basik-black);
+}
+
+.service-list-delivery {
+    background-color: var(--basik-white);
+    box-shadow: 0px 1px 0px #FFFFFF;
+    width: 240px;
+    height: 61px;
+    font-weight: bold;
+    font-size: 21px;
+    color: var(--dark-grey);
+}
+
+.service-list-warranty {
+    background-color: var(--dark-grey);
+    box-shadow: 0px 1px 0px #293449, inset 0px 1px 0px #405069;
+    width: 241px;
+    height: 61px;
+    font-weight: bold;
+    font-size: 21px;
+    line-height: 30px;
+    color: var(--low-white);
+}
+
+.service-list-credit {
+    background-color: var(--dark-grey);
+    box-shadow: 0px 1px 0px #293449, inset 0px 1px 0px #405069;
+    width: 241px;
+    height: 61px;
+    font-weight: bold;
+    font-size: 21px;
+    line-height: 30px;
+    color: var(--low-white);
+}
+
+.details {
+    display: grid;
+    grid-template-columns: auto auto;
+    width: 940px;
+    margin: 0 auto;
 }
 
 .details h2 {
@@ -291,21 +452,80 @@ img {
     color: var(--basik-black)
 }
 
-.footer-navigation {
+.footer-navigation-bar {
     background-color: var(--dark-grey);
+    height: 193px;
+}
+ 
+.footer-navigation {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.footer-navigation-menu {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto auto;
+    gap: 20px;
+}
+
+.footer-nav {
+    display: grid;
+    grid-template-columns: repeat(6, auto);
 }
 
 .footer-navigation h2 {
-    visibility: hidden;
+    display: none;
+}
+
+.footer-cat { 
+    display: grid;
+    grid-template-columns: repeat(6, auto);
+    gap: 20px;
+    text-align: center; 
 }
 
 .footer-cat address {
     color: var(--low-white);
 }
 
-.footer-contacts {
+.footer-contacts-bar {
     background-color: var(--dark-blue);
+    height: 107px;
+}
+
+.footer-contacts {
+    display: grid;
+    grid-template-columns: auto auto auto;
     color: var(--basik-white);
+    width: 940px;
+    margin: 0 auto;
+}
+
+.footer-contacts h2 {
+    display: none
+}
+
+.footer-social {
+    display: grid;
+    grid-template-columns: 44px 44px 44px;
+    gap: 10px;
+}
+
+.footer-copyright {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.social {
+    background: linear-gradient(0deg, #212A3A, #212A3A);
+    border-radius: 50%;
+    Width: 44px;
+    Height: 44px;   
+}
+
+.social-hidden {
+    opacity: 0;  
 }
 
 /* Стили для католога */
@@ -357,13 +577,3 @@ img {
     color: var(--basik-black)
 }
 
-.social {
-    background: linear-gradient(0deg, #212A3A, #212A3A);
-    border-radius: 50%;
-    Width: 44px;
-    Height: 44px;   
-}
-
-.social-hidden {
-    opacity: 0;  
-}
