--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ input[type="search"] {
     top: 15px;
     width: 14px;
     height: 15px;
-    background-image: url("/img/icon-bookmark.svg");
+    background-image: url("../img/icon-bookmark.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
     opacity: 0.3;
@@ -219,7 +219,7 @@ input[type="search"] {
     top: 17px;
     width: 15px;
     height: 15px;
-    background-image: url("/img/icon-cart.svg");
+    background-image: url("../img/icon-cart.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
     opacity: 0.3;
@@ -269,13 +269,13 @@ input[type="search"] {
     top: 13px;
     width: 20px;
     height: 17px;
-    background-image: url("/img/icon-login.svg");
+    background-image: url("../img/icon-login.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
 }
 
 .button-sign:hover::before {
-    background-image: url("/img/icon-loginhov.png");
+    background-image: url("../img/icon-loginhov.png");
 }
 
 .button-reg:hover,
@@ -325,7 +325,7 @@ input[type="search"] {
     top: 14px;
     width: 18px;
     height: 19px;
-    background-image: url("/img/Tell.svg");
+    background-image: url("../img/Tell.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
 }
@@ -509,7 +509,7 @@ input[type="search"] {
     top: 31px;
     width: 44px;
     height: 65px;
-    background-image: url("/img/Object-mat.svg");
+    background-image: url("../img/Object-mat.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
 }
@@ -521,7 +521,7 @@ input[type="search"] {
     top: 34px;
     width: 75px;
     height: 61px;
-    background-image: url("/img/Shape.svg");
+    background-image: url("../img/Shape.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
 }
@@ -533,7 +533,7 @@ input[type="search"] {
     top: 30px;
     width: 78px;
     height: 62px;
-    background-image: url("/img/icon-3.svg");
+    background-image: url("../img/icon-3.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
 }
@@ -545,7 +545,7 @@ input[type="search"] {
     top: 26px;
     width: 78px;
     height: 75px;
-    background-image: url("/img/icon-4.svg");
+    background-image: url("../img/icon-4.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
 }
@@ -557,7 +557,7 @@ input[type="search"] {
     top: 32px;
     width: 78px;
     height: 62px;
-    background-image: url("/img/icon-5.svg");
+    background-image: url("../img/icon-5.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
 }
@@ -593,7 +593,7 @@ input[type="search"] {
     left: 24px;
     width: 21px;
     height: 39px;
-    background-image: url(../img/slideleft.svg);
+    background-image: url("../img/slideleft.svg");
     background-repeat: no-repeat;
     position: 0 0;
 }
@@ -605,7 +605,7 @@ input[type="search"] {
     left: 578px;
     width: 21px;
     height: 39px;
-    background-image: url(../img/slideright.svg);
+    background-image: url("../img/slideright.svg");
     background-repeat: no-repeat;
     position: 0 0;
 }
@@ -667,7 +667,7 @@ input[type="search"] {
     left: 24px;
     width: 21px;
     height: 39px;
-    background-image: url(../img/slideleft.svg);
+    background-image: url("../img/slideleft.svg");
     background-repeat: no-repeat;
     position: 0 0;
 }
@@ -679,7 +679,7 @@ input[type="search"] {
     left: 580px;
     width: 21px;
     height: 39px;
-    background-image: url(../img/slideright.svg);
+    background-image: url("../img/slideright.svg");
     background-repeat: no-repeat;
     position: 0 0;
 }
@@ -805,7 +805,7 @@ input[type="search"] {
     top: 10px;
     width: 15px;
     height: 15px;
-    background-image: url("/img/icon-cart.svg");
+    background-image: url("../img/icon-cart.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
     opacity: 0.3;
@@ -1284,7 +1284,7 @@ input[type="search"] {
     position: absolute;
     top: 12px;
     left: 585px;
-    background-image: url(../img/CloseModal.svg);
+    background-image: url("../img/CloseModal.svg");
     width: 30px;
     height: 30px;
     z-index: 2;
