--- a/14/css/style.css
+++ b/14/css/style.css
@@ -142,7 +142,8 @@ img {
     list-style: none;
     width: 940px;
     margin: 0 auto;
-    min-height: 42px;    
+    min-height: 42px;  
+    flex-basis: 0 0auto;  
 }
 
 .header-logo {
@@ -165,7 +166,8 @@ img {
 
 .main-order-search {
     position: relative;
-    width: 270px;
+    flex-basis: 0 0 auto;
+    flex-shrink: 1;
 }
 
 .main-order-search input::placeholder {
@@ -225,21 +227,28 @@ input[type="search"] {
     display: flex;   
     justify-content: space-between;
     align-items: center;
-    flex-basis: 450px;     
+    flex-basis: auto; 
+
     margin: 0;
     padding-top: 1px;
 }
 
+.order-navigation li {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0 0 auto;
+}
+
 .order-navigation-inbookmarks {
     position: relative;
-    padding: 12px 24px 9px 43px;
+    padding: 12px 38px 9px 43px;
 }
 
 .order-navigation-inbookmarks::before {
     content: "";
     position: absolute;
     left: 20px;
-    top: 14px;
+    top: 12px;
     width: 14px;
     height: 15px;
     background-image: url('../img/icon-bookmark.svg');
@@ -260,14 +269,14 @@ input[type="search"] {
 
 .order-inbasket {
     position: relative;
-    padding: 15px 27px 10px 50px;
+    padding: 13px 27px 8px 35px;
 }
 
 .order-inbasket::before {
     content: "";
     position: absolute;
-    left: 27px;
-    top: 17px;
+    left: 12px;
+    top: 12px;
     width: 15px;
     height: 15px;
     background-image: url('../img/icon-cart.svg');
@@ -279,6 +288,10 @@ input[type="search"] {
 .order-inbasket:active {
     opacity: 0.5;
     background-color: var(--dark-blue-click);
+}
+
+.activebacground {
+    background: var(--basik-red);
 }
 
 .order-navigation-arrange {
@@ -921,27 +934,35 @@ input[type="search"] {
     outline: none;
 }
 
-.products-item:hover {
+.products-item:hover,
+.products-item:focus-within {
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 }
 
  .products-item-bay {
-    display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0; 
+    opacity: 0;
+    z-index: 999;
 }
 
-.products-item:hover > .products-item-image {
-    display: none;
+.products-item:hover > .products-item-image,
+.products-item:focus-within > .products-item-image {
+    opacity: 0;
 }
 
-.products-item:hover > .products-item-bay{
-    display: block;
+.products-item:hover > .products-item-bay, 
+.products-item:focus-within > .products-item-bay {
+    opacity: 1;
 }
 
 .products-item-image img {
     width: 184px;
-    height: 164px;
+    height: 142px;
     object-fit: scale-down;
-    object-position: 50% 50%;
+    object-position: 9% 60%;
 }
    
 .products-item span {
@@ -955,6 +976,8 @@ input[type="search"] {
 }
 
 .products-item del {
+    display: inline-block;
+    margin-top: 4px;
     font-family: Pt Sans;
     font-style: normal;
     font-weight: bold;
@@ -1015,7 +1038,7 @@ input[type="search"] {
     width: 141px;
     height: 28px;
     padding-top: 10px;
-    margin-top: -1px;
+    margin-top: 16px;
     margin-left: 12px;
     text-transform: uppercase;
     color: var(--basik-white);
@@ -1396,9 +1419,10 @@ input[type="search"] {
     line-height: 18px;
     text-transform: uppercase;
     padding: 13px 61px 9px 62px;
-    outline: none;
     border: none;
 }
+
+.details-list-lost:not()
 
 .name-form {
     position: absolute;
@@ -1578,7 +1602,9 @@ input[type="search"] {
 }
 
 .footer-cat-nav a:hover,
-.footer-nav a:hover {
+.footer-nav a:hover,
+.footer-cat-nav a:focus,
+.footer-nav a:focus {
     text-decoration: underline;
 }
 
@@ -1707,11 +1733,13 @@ input[type="search"] {
     display: block;
 }
 
-.social a:hover {
+.social a:hover,
+.social a:focus {
     background: linear-gradient(0deg, #ee3643, #ee3643);
     border-radius: 50%;
     Width: 38px;
-    Height: 38px;   
+    Height: 38px;  
+    outline: none; 
 }
 
 .social-hidden {
@@ -1728,6 +1756,11 @@ input[type="search"] {
 .catalog-block {
     width: 940px;
     margin: 0 auto;
+}
+
+.catalog-block h2 {
+    visibility: hidden;
+    margin-bottom: -34px;
 }
 
 .catalog-navigation {
@@ -1821,7 +1854,7 @@ input[type="search"] {
 
 .range-price {
     width: 220px;
-    margin-top: 8px;
+    margin-top: 12px;
 }
 
 .range-slider {
@@ -2007,7 +2040,7 @@ input[type="search"] {
     height: 18px;
     flex-shrink: 0;
     flex-grow: 0;
-    border: 3px solid #adb5bd;
+    border: 4px solid #adb5bd;
     border-radius: 50%;
     background-repeat: no-repeat;
     background-position: center center;
@@ -2097,10 +2130,6 @@ input[type="search"] {
     margin-top: -5px;
 }
 
-.active {
-    color: var(--basik-red);
-}
-
 .catalog-sorting .active {
     color: var(--basik-red);
 }
@@ -2156,6 +2185,11 @@ input[type="search"] {
 
 .catalog-sorting li a:focus {
     color: var(--basik-red);
+}
+
+.active {
+    color: var(--basik-red);
+
 }
 
 .catalog-filter-sorting span {
@@ -2339,13 +2373,14 @@ input[type="search"] {
 }
 
 .perforators {
-    display: flex;
+    
     flex-direction: column;
     justify-content: center;
     background-color: var(--basik-background);
-    height: 261px;
+    min-height: 261px;
     width: unset;
-    margin-top: 54px
+    margin-top: 54px;
+    padding: 62px;
 }
 
 .perforators h2 {
@@ -2543,7 +2578,7 @@ input[type="search"] {
 }
 
 .page-footer-catalog {
-    margin-top: 2px
+    margin-top: -124px
 }
 
     /* Модальные окна */
