--- a/css/style.css
+++ b/css/style.css
@@ -1421,8 +1421,6 @@ input[type="search"] {
     border: none;
 }
 
-.details-list-lost:not()
-
 .name-form {
     position: absolute;
     border: 2px solid var(--basik-greylight);
@@ -2593,29 +2591,24 @@ input[type="search"] {
 
 .modalMap {
     position: absolute;
-    z-index: 1;
     display: none;
-    pointer-events: none;
-    top: 2375px;
+    top: 2370px;
     right: 0;
     bottom: 0;
-    left: 370px;
+    left: 195px;
     border-top: 7px solid var(--basik-red);
-    width: 620px;
+    width: 943px;
     height: 430px;
-    background-image: url('../img/MapModal.png');
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 }
     
-.modalMap:target {
+.modalMap-show {
     display: block;
-    pointer-events: auto;
 }
     
 .modalMap-close {
     position: absolute;
-    top: 12px;
-    left: 585px;
+    top: 9px;
+    left: 912px;
     background-image: url('../img/closem.svg');
     width: 30px;
     height: 30px;
