--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@
    --basik-green: #63a63e;
    --basik-green-nav: #5fbb2d;
    --basik-green-click: #518534;
-   --stuff-yellow: #ffda96;
+   --stuff-yellow: #ffd180;
    --stuff-blue: #3bbce3;
    --stuff-violet: #dc91d8;
    --stuff-green: #8ed78f;
